--- a/frontend/index.html
+++ b/frontend/index.html
@@ -187,6 +187,6 @@
       </div>
     </div>
 
-    <script type="module" src="/src/main.ts"></script>
+    <script type="module" src="/src/main.js"></script>
   </body>
 </html>
