--- a/frontend/index.html
+++ b/frontend/index.html
@@ -64,6 +64,7 @@
         Signup: false,
         StaticURL: "",
         Theme: "",
+        HomeURL: "",
         TusSettings: { chunkSize: 10485760, retryCount: 5 },
         Version: "(untracked)",
       };
