--- a/frontend/index.html
+++ b/frontend/index.html
@@ -32,7 +32,7 @@
     <meta name="theme-color" content="#2979ff" />
 
     <!-- Add to home screen for Safari on iOS/iPadOS -->
-    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="apple-mobile-web-app-title" content="assets" />
     <link rel="apple-touch-icon" href="/img/icons/apple-touch-icon.png" />
