--- a/frontend/index.html
+++ b/frontend/index.html
@@ -56,6 +56,7 @@
         DisableUsedPercentage: false,
         EnableExec: true,
         EnableThumbs: true,
+        LogoutPage: "",
         LoginPage: true,
         Name: "",
         NoAuth: false,
