feat: configurable logout page URL for proxy/hook auth (#3884)
Co-authored-by: Henrique Dias <mail@hacdias.com>

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -39,6 +39,7 @@
         DisableUsedPercentage: false,
         EnableExec: true,
         EnableThumbs: true,
+        LogoutPage: "",
         LoginPage: true,
         Name: "",
         NoAuth: false,
