--- a/frontend/index.html
+++ b/frontend/index.html
@@ -50,6 +50,7 @@
         Theme: "",
         TusSettings: { chunkSize: 10485760, retryCount: 5 },
         Version: "(untracked)",
+        UnzipEnabled: true,
       };
       // Global function to prepend static url
       window.__prependStaticUrl = (url) => {
